fixed ui/ux issues

--- a/assets/html/certifications.html
+++ b/assets/html/certifications.html
@@ -23,10 +23,12 @@
             <nav class="absolute top-0 left-0 w-full px-6 py-4 bg-transparent md:px-12">
                 <div class="flex justify-between items-center">
                     <!-- Title -->
-                    <div class="flex items-center gap-3">
-                        <img class="w-16 md:w-20" src="/images/logo.png" loading="lazy" alt="Hero Image" />
-                        <h1 class="text-white text-xl md:2xl font-bold">Hafiz Enterprise</h1>
-                    </div>
+                     <a href="index.html/#hero">
+                         <div class="flex items-center gap-3">
+                             <img class="w-16 md:w-20" src="/images/logo.png" loading="lazy" alt="Hero Image" />
+                             <h1 class="text-white text-xl md:2xl font-bold">Hafiz Enterprise</h1>
+                         </div>
+                     </a>
                     <div class="relative">
                         <!-- Toggle Button -->
                         <label for="menu-toggle" class="swap swap-rotate text-white md:hidden">
@@ -75,7 +77,7 @@
                 class="absolute inset-0 top-1/2 transform -translate-y-1/2 px-4 md:px-8 flex flex-col justify-center items-center text-center">
                 <div id="intersacting-whatsapp-btn" class="text-white contents">
                     <!-- Adjusted Main Heading -->
-                    <h1 class="text-4xl md:text-6xl font-bold text-white leading-tight max-w-4xl" data-anime="slide-up">
+                    <h1 class="text-4xl md:text-5xl font-bold text-white leading-tight max-w-4xl" data-anime="slide-up">
                         Our Official Certifications and Sales Receipts
                     </h1>
                     <!-- Adjusted Subheading -->
@@ -112,31 +114,31 @@
                 </p>
             </div>
 
-        <!-- Table Layout for Documents -->
-        <div class="overflow-x-auto" data-anime="slide-up">
-            <!-- Sorting Buttons -->
-            <div class="flex justify-center mb-8">
-                <button
-                    class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
-                    onclick="filterGallery('all')">
-                    All
-                </button>
-                <button
-                    class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
-                    onclick="filterGallery('Certifications')">
-                    Certifications
-                </button>
-                <button
-                    class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
-                    onclick="filterGallery('Memberships')">
-                    Memberships
-                </button>
-                <button
-                    class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
-                    onclick="filterGallery('Orders')">
-                    Orders
-                </button>
-            </div>
+            <!-- Table Layout for Documents -->
+            <div class="overflow-x-auto" data-anime="slide-up">
+                <!-- Sorting Buttons -->
+                <div class="flex justify-center mb-8">
+                    <button
+                        class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
+                        onclick="filterGallery('all')">
+                        All
+                    </button>
+                    <button
+                        class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
+                        onclick="filterGallery('Certifications')">
+                        Certifications
+                    </button>
+                    <button
+                        class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
+                        onclick="filterGallery('Memberships')">
+                        Memberships
+                    </button>
+                    <button
+                        class="px-4 py-2 mx-2 text-sm font-medium text-gray-700 border border-gray-300 rounded-lg hover:bg-green-600 shadow hover:text-white"
+                        onclick="filterGallery('Orders')">
+                        Orders
+                    </button>
+                </div>
 
                 <table class="min-w-full text-sm border border-gray-300 shadow-lg">
                     <thead class="bg-gray-100">
@@ -328,13 +330,14 @@
                     <div data-anime="fade-in">
                         <h6 class="text-lg font-bold mb-4 text-white text-center md:text-start">Reach Out To Us</h6>
                         <div class="flex flex-col md:flex-row gap-4">
-                            <a href="https://wa.me/923003114701"
+                            <a href="https://wa.me/923003114701" target="_blank"
                                 class="flex items-center justify-center bg-green-600 hover:bg-green-700 py-1 px-5 rounded-full cursor-pointer">
                                 <img src="/images/icons/whatsapp.svg" class="w-8 h-8" alt="">
                                 <p class="font-semibold text-white">WhatsApp</p>
 
                             </a>
-                            <a href=""
+                            <a href="https://www.facebook.com/profile.php?id=61560452236931&mibextid=ZbWKwL"
+                                target="_blank"
                                 class="flex items-center justify-center bg-blue-600 hover:bg-blue-700 py-1 px-5 rounded-full cursor-pointer">
                                 <img src="/images/icons/facebook.svg" class="w-10 h-10" alt="">
                                 <p class="font-semibold text-white">Facebook</p>
