--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
             <nav class="absolute top-0 left-0 w-full px-6 py-4 bg-transparent md:px-12 z-20">
                 <div class="flex justify-between items-center">
                     <!-- Title -->
-                    <div class="flex items-center gap-3">
-                        <img class="w-16 md:w-20" src="/images/logo.png" alt="Hero Image" />
-                        <h1 class="text-white text-2xl font-bold">Hafiz Enterprise</h1>
-                    </div>
-                    <div class="relative">
+                    <a href="index.html/#hero">
+                        <div class="flex items-center gap-3">
+                            <img class="w-16 md:w-20" src="/images/logo.png" alt="Hero Image" />
+                            <h1 class="text-white text-2xl font-bold">Hafiz Enterprise</h1>
+                        </div>
+                    </a>
+                    <div class="relative z-50">
                         <!-- Toggle Button -->
                         <label for="menu-toggle" class="swap swap-rotate text-white md:hidden">
                             <input type="checkbox" id="menu-toggle" class="hidden" />
@@ -104,10 +106,10 @@
                 </div>
             </nav>
             <div
-                class="absolute inset-0 top-1/2 transform -translate-y-1/2 px-8 flex flex-col justify-center items-center text-center z-20">
+                class="absolute inset-0 top-1/2 transform -translate-y-1/2 px-8 flex flex-col justify-center items-center text-center z-10">
                 <div class="text-white contents">
                     <!-- Adjusted Main Heading -->
-                    <h1 class="text-4xl md:text-6xl font-bold text-white leading-tight max-w-4xl" data-anime="slide-up">
+                    <h1 class="text-4xl md:text-5xl font-bold text-white leading-tight max-w-4xl" data-anime="slide-up">
                         Trusted Fire Safety Equipment Backed by Expertise
                     </h1>
                     <!-- Adjusted Subheading -->
@@ -117,7 +119,7 @@
                     </p>
                 </div>
                 <div class="mt-8">
-                    <a href="#contact" id="intersacting-whatsapp-btn"
+                    <a href="tel:+923003114701" id="intersacting-whatsapp-btn"
                         class="inline-block px-10 py-3 text-white font-semibold text-lg rounded-full bg-green-600 hover:bg-green-700 transition duration-300">
                         Contact Us
                     </a>
@@ -285,7 +287,7 @@
                 </div>
                 <div class="flex flex-col justify-center items-center">
                     <span class="font-bold text-3xl md:text-4xl">+92-3003114701</span>
-                    <span class="font-semibold">www.hafizenterprise.netlify.com</span>
+                    <span class="font-semibold">hafizenterprise.netlify.app</span>
                 </div>
             </div>
 
@@ -336,7 +338,7 @@
                 </p>
             </div>
             <!-- Card Grid -->
-            <div class="grid gap-5 grid-cols-2 sm:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4" data-anime="slide-up">
+            <div class="grid gap-5 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4" data-anime="slide-up">
                 <!-- Card 1 -->
                 <div class="bg-white rounded-lg shadow hover:shadow-xl transition-shadow duration-200 overflow-hidden"
                     data-anime="fade-in">
@@ -685,13 +687,13 @@
                     <div data-anime="fade-in">
                         <h6 class="text-lg font-bold mb-4 text-white text-center md:text-start">Reach Out To Us</h6>
                         <div class="flex flex-col md:flex-row gap-4">
-                            <a href="https://wa.me/923003114701"
+                            <a href="https://wa.me/923003114701" target="_blank"
                                 class="flex items-center justify-center bg-green-600 hover:bg-green-700 py-1 px-5 rounded-full cursor-pointer">
                                 <img src="/images/icons/whatsapp.svg" class="w-8 h-8" alt="">
                                 <p class="font-semibold text-white">WhatsApp</p>
 
                             </a>
-                            <a href=""
+                            <a href="https://www.facebook.com/profile.php?id=61560452236931&mibextid=ZbWKwL" target="_blank"
                                 class="flex items-center justify-center bg-blue-600 hover:bg-blue-700 py-1 px-5 rounded-full cursor-pointer">
                                 <img src="/images/icons/facebook.svg" class="w-10 h-10" alt="">
                                 <p class="font-semibold text-white">Facebook</p>
